--- a/index.html
+++ b/index.html
@@ -108,6 +108,24 @@
             </div>
           </div>
         </div>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card h-100" tabindex="0">
+            <div class="card-body">
+              <h3 class="h5 card-title">熱傳導</h3>
+              <p class="card-text small">觀察固體粒子碰撞如何傳遞熱能，理解溫度與粒子振動的關係。</p>
+              <a href="physics/heat-conduction.html" class="btn btn-sm btn-primary" aria-label="進入熱傳導互動模擬">進入 <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card h-100" tabindex="0">
+            <div class="card-body">
+              <h3 class="h5 card-title">正弦波前進</h3>
+              <p class="card-text small">觀察橫波傳播過程，質點只做垂直振動，波形向前傳遞能量。</p>
+              <a href="physics/sine-wave-propagation.html" class="btn btn-sm btn-primary" aria-label="進入正弦波前進互動模擬">進入 <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
