--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="card h-100" tabindex="0">
             <div class="card-body">
+              <h3 class="h5 card-title">溫度與氣體粒子活動</h3>
+              <p class="card-text small">調整溫度觀察理想氣體粒子的速度與碰撞頻率變化，理解平均動能。</p>
+              <a href="physics/kinetic-theory-gas.html" class="btn btn-sm btn-primary" aria-label="進入溫度與氣體粒子活動互動模擬">進入 <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="card h-100" tabindex="0">
+            <div class="card-body">
               <h3 class="h5 card-title">熱傳導</h3>
               <p class="card-text small">觀察固體粒子碰撞如何傳遞熱能，理解溫度與粒子振動的關係。</p>
               <a href="physics/heat-conduction.html" class="btn btn-sm btn-primary" aria-label="進入熱傳導互動模擬">進入 <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
