Update titles and footers for consistency across physics simulations
- Changed titles to include "國中自然科學模擬動畫" for better clarity in:
  - convex-lens-imaging.html
  - free-fall.html
  - heat-conduction.html
  - hoz-waves.html
  - kinetic-theory-gas.html
  - sine-wave-propagation.html
- Updated footer text to reflect the new branding in:
  - convex-lens-imaging.html
  - free-fall.html
  - hoz-waves.html
  - kinetic-theory-gas.html
  - simulation-template.html

--- a/physics/heat-conduction.html
+++ b/physics/heat-conduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>固體熱傳導模擬 - 國中數理互動學習</title>
+    <title>固體熱傳導模擬 - 國中自然科學模擬動畫</title>
     <meta name="description" content="互動式熱傳導模擬，觀察粒子碰撞與能量傳遞過程">
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
