--- a/physics/free-fall.html
+++ b/physics/free-fall.html
@@ -3,36 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>自由落體模擬</title>
+  <title>自由落體模擬 - 國中自然科學模擬動畫</title>
   <meta name="description" content="自由落體加速度與位移互動模擬" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <style>
-    .skip-link {position:absolute;left:-1000px;top:0;background:#000;color:#fff;padding:.5rem 1rem;z-index:1000;}
-    .skip-link:focus {left:0;}
-    :focus-visible {outline:3px solid #ff9800;outline-offset:2px;}
-    canvas {background:#0d1117;display:block;max-width:100%;height:auto;border:1px solid #333;border-radius:4px;}
-    .live-region {min-height:1.5em;}
-  </style>
+  <!-- Modular CSS -->
+  <link rel="stylesheet" href="../assets/css/common.css" />
+  <link rel="stylesheet" href="../assets/css/accessibility.css" />
 </head>
 <body class="d-flex flex-column min-vh-100">
   <a href="#main" class="skip-link">跳到主內容</a>
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" aria-label="頁面導覽">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html" aria-label="返回首頁"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> 首頁</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="切換導覽"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="../index.html#physics">物理</a></li>
-            <li class="nav-item"><a class="nav-link" href="../index.html#math">數學</a></li>
-            <li class="nav-item"><a class="nav-link" href="../index.html#chemistry">化學</a></li>
-          </ul>
-          <button id="themeToggle" class="btn btn-outline-secondary" type="button" aria-pressed="false" aria-label="切換深淺主題"><i class="fa-solid fa-circle-half-stroke" aria-hidden="true"></i></button>
-        </div>
-      </div>
-    </nav>
-  </header>
+  
+  <!-- Navbar Container -->
+  <div id="navbarContainer"></div>
   <main id="main" class="container py-3" tabindex="-1">
     <h1 class="h3 mb-3">自由落體模擬</h1>
     <p class="mb-4">調整初始高度與重力加速度，觀察物體隨時間的高度、速度變化。忽略空氣阻力。</p>
@@ -105,34 +88,72 @@
       </aside>
     </div>
   </main>
-  <footer class="mt-auto py-3 bg-light border-top small text-center" role="contentinfo">&copy; 2025 國中數理互動學習站</footer>
+  
+  <!-- Footer Container -->
+  <div id="footerContainer"></div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // 主題切換
-    const toggleBtn = document.getElementById('themeToggle');
-    function setTheme(theme){
-      document.documentElement.setAttribute('data-bs-theme', theme);
-      localStorage.setItem('theme', theme);
-      toggleBtn.setAttribute('aria-pressed', theme === 'dark');
-    }
-    const saved = localStorage.getItem('theme');
-    if(saved){setTheme(saved);} else if(window.matchMedia('(prefers-color-scheme: dark)').matches){setTheme('dark');}
-    toggleBtn.addEventListener('click', () => {
-      const current = document.documentElement.getAttribute('data-bs-theme') || 'light';
-      setTheme(current === 'light' ? 'dark' : 'light');
+  
+  <!-- ES Module: Load Navigation & Theme -->
+  <script type="module">
+    import { initThemeToggle } from '../assets/js/theme.js';
+    import { loadNavigation } from '../assets/js/navigation.js';
+    import { createLiveRegion, bindRangeNumber, KeyboardManager } from '../assets/js/a11y.js';
+
+    // 載入導覽和頁尾
+    await loadNavigation({
+      baseUrl: '..',
+      navbarPath: '../assets/templates/navbar.html',
+      footerPath: '../assets/templates/footer.html'
     });
 
-    // 參數同步
-    const height = document.getElementById('height');
-    const heightNum = document.getElementById('heightNum');
-    const gravity = document.getElementById('gravity');
-    const gravityNum = document.getElementById('gravityNum');
-    function syncRange(rangeEl, numEl){ numEl.value = rangeEl.value; rangeEl.setAttribute('aria-valuenow', rangeEl.value); }
-    function syncNumber(rangeEl, numEl){ rangeEl.value = numEl.value; rangeEl.setAttribute('aria-valuenow', rangeEl.value); }
-    height.addEventListener('input', ()=> syncRange(height, heightNum));
-    heightNum.addEventListener('input', ()=> syncNumber(height, heightNum));
-    gravity.addEventListener('input', ()=> syncRange(gravity, gravityNum));
-    gravityNum.addEventListener('input', ()=> syncNumber(gravity, gravityNum));
+    // 初始化主題切換
+    initThemeToggle();
+
+    // 建立 Live Region 供模擬使用
+    window.liveRegion = createLiveRegion({ id: 'simLiveRegion', throttle: 300 });
+
+    // 綁定參數控制
+    bindRangeNumber({
+      rangeId: 'height',
+      numberId: 'heightNum',
+      onChange: (value) => { h0 = value; if (!running) reset(); },
+      unit: '公尺',
+      label: '初始高度',
+      liveRegion: window.liveRegion
+    });
+
+    bindRangeNumber({
+      rangeId: 'gravity',
+      numberId: 'gravityNum',
+      onChange: (value) => { g = value; if (!running) reset(); },
+      unit: 'm/s²',
+      label: '重力加速度',
+      liveRegion: window.liveRegion
+    });
+
+    // 鍵盤快捷鍵管理
+    const keyboardManager = new KeyboardManager();
+    keyboardManager.register(' ', () => running ? pause() : start(), { description: '播放/暫停' });
+    keyboardManager.register('r', reset, { description: '重置' });
+    keyboardManager.register('ArrowLeft', () => {
+      const heightInput = document.getElementById('height');
+      heightInput.value = Math.max(1, parseFloat(heightInput.value) - 1);
+      heightInput.dispatchEvent(new Event('input'));
+    }, { description: '減少高度' });
+    keyboardManager.register('ArrowRight', () => {
+      const heightInput = document.getElementById('height');
+      heightInput.value = Math.min(100, parseFloat(heightInput.value) + 1);
+      heightInput.dispatchEvent(new Event('input'));
+    }, { description: '增加高度' });
+  </script>
+  
+  <!-- Page-Specific Simulation Logic -->
+  <script>
+    // ===== 自由落體模擬邏輯 =====
+    // 參數（由模組綁定更新）
+    let h0 = parseFloat(document.getElementById('height').value);
+    let g = parseFloat(document.getElementById('gravity').value);
 
     // 模擬邏輯
     const canvas = document.getElementById('simCanvas');
@@ -149,17 +170,29 @@
     let running = false;
     let t = 0; // 時間
     let lastTime = null;
-    let y = parseFloat(height.value); // 高度
+    let y = h0; // 高度
     let v = 0; // 速度
 
     function reset(){
-      t = 0; lastTime = null; v = 0; y = parseFloat(height.value);
+      t = 0; lastTime = null; v = 0; y = h0;
       statusRegion.textContent = '狀態：已重置';
       updateOutputs();
       draw();
       btnPause.disabled = true;
       btnStart.setAttribute('aria-pressed','false');
       btnStart.classList.remove('btn-success');
+      running = false;
+    }
+
+    function start(){
+      if(running){return;} // 已在運行
+      running = true; statusRegion.textContent = '狀態：運行中'; btnPause.disabled = false;
+      btnStart.setAttribute('aria-pressed','true'); btnStart.classList.add('btn-success');
+      requestAnimationFrame(step);
+    }
+
+    function pause(){
+      running = false; statusRegion.textContent = '狀態：已暫停'; btnStart.setAttribute('aria-pressed','false'); btnStart.classList.remove('btn-success');
     }
 
     function updateOutputs(){
@@ -175,8 +208,7 @@
       ctx.fillStyle = '#444';
       ctx.fillRect(0, canvas.height - 20, canvas.width, 20);
       // 物體
-      const maxHeight = parseFloat(height.value);
-      const ratio = y / maxHeight;
+      const ratio = y / h0;
       const screenY = (canvas.height - 40) - ratio * (canvas.height - 60);
       ctx.fillStyle = '#ff9800';
       ctx.beginPath();
@@ -195,10 +227,9 @@
       if(lastTime === null){lastTime = timestamp;}
       const dt = (timestamp - lastTime)/1000; // 秒
       lastTime = timestamp;
-      const g = parseFloat(gravity.value);
       // 更新運動 (簡單物理公式)
       v = g * t;
-      y = parseFloat(height.value) - 0.5 * g * t * t;
+      y = h0 - 0.5 * g * t * t;
       if(y <= 0){ y = 0; running = false; statusRegion.textContent = '狀態：已著地'; }
       else { t += dt; }
       updateOutputs();
@@ -209,24 +240,11 @@
       }
     }
 
-    btnStart.addEventListener('click', ()=> {
-      if(running){return;} // 已在運行
-      running = true; statusRegion.textContent = '狀態：運行中'; btnPause.disabled = false;
-      btnStart.setAttribute('aria-pressed','true'); btnStart.classList.add('btn-success');
-      requestAnimationFrame(step);
-    });
-    btnPause.addEventListener('click', ()=> {
-      running = false; statusRegion.textContent = '狀態：已暫停'; btnStart.setAttribute('aria-pressed','false'); btnStart.classList.remove('btn-success');
-    });
+    btnStart.addEventListener('click', start);
+    btnPause.addEventListener('click', pause);
     btnReset.addEventListener('click', reset);
 
-    document.addEventListener('keydown', (e) => {
-      if(e.code === 'Space'){e.preventDefault(); if(running){btnPause.click();} else {btnStart.click();}}
-      if(e.key === 'R'){btnReset.click();}
-      if(e.key === 'ArrowLeft'){height.stepDown();syncRange(height,heightNum); if(!running){y=parseFloat(height.value); draw();}}
-      if(e.key === 'ArrowRight'){height.stepUp();syncRange(height,heightNum); if(!running){y=parseFloat(height.value); draw();}}
-    });
-
+    // 初始化畫布
     reset();
   </script>
 </body>
