--- a/physics/hoz-waves.html
+++ b/physics/hoz-waves.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>疏密波（縱波）模擬</title>
+    <title>疏密波（縱波）模擬 - 國中自然科學模擬動畫</title>
     <meta name="description" content="疏密波(縱波)傳播與質點運動互動式模擬" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -89,7 +89,7 @@
             </aside>
         </div>
     </main>
-    <footer class="mt-auto py-3 bg-light border-top small text-center" role="contentinfo">&copy; 2025 國中數理互動學習站</footer>
+    <footer class="mt-auto py-3 bg-light border-top small text-center" role="contentinfo">&copy; 2025 國中自然科學模擬動畫</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // 主題切換
