--- a/physics/sine-wave-propagation.html
+++ b/physics/sine-wave-propagation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>正弦波前進模擬 - 國中數理互動學習</title>
+    <title>正弦波前進模擬 - 國中自然科學模擬動畫</title>
     <meta name="description" content="互動式正弦波前進模擬，觀察橫波的傳播與質點振動">
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
