--- a/public/physics/kinetic-theory-gas.html
+++ b/public/physics/kinetic-theory-gas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-Hant" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,6 @@
                         <div class="card-body">
                             <h1 class="h3 card-title mb-3"><i class="fa-solid fa-wind" aria-hidden="true"></i> 溫度與氣體粒子活動</h1>
                             <p class="card-text mb-3">觀察理想氣體在封閉容器中的粒子運動：溫度越高，平均動能越大，運動越快速。</p>
-                            <div id="statusRegion" class="visually-hidden" aria-live="polite" aria-atomic="true">初始化中</div>
                             <div class="canvas-container border border-2 border-secondary-subtle">
                                 <canvas id="simCanvas" role="img" aria-label="氣體粒子運動模擬"></canvas>
                                 <div class="position-absolute top-0 end-0 m-2 bg-white bg-opacity-75 rounded px-2 py-1 border small"><span id="tempValueDisplay" class="fw-bold text-danger">25</span> °C</div>
